{
    "name": "Controls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "911e71a7-50e6-45a7-ae73-ce64860c0b11",
            "actions": [
                {
                    "name": "MenuOpenClose",
                    "type": "Button",
                    "id": "dcab10b7-50a4-44a0-8716-ac978cf02f15",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "LookAround",
                    "type": "Value",
                    "id": "8595bb68-61e8-4d33-895f-3c6bf836fbec",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TapSelect",
                    "type": "Button",
                    "id": "59d86836-80ba-4902-8474-19fe975ab33e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HoldSelect",
                    "type": "Button",
                    "id": "3c78358e-3d06-4822-9382-b8cab25918eb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4abd76c8-8ba8-4e85-9938-72747d9574ef",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse;Keyboard",
                    "action": "MenuOpenClose",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "db182765-9344-4bd1-83f5-ba3ae557e013",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "MenuOpenClose",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3698a298-f47f-4159-8ed1-bcf7fff18021",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "TapSelect",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "24d551d5-9a95-4654-aa7b-46dd4ff52a7a",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "TapSelect",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3edc92b7-f254-48f7-97bc-347e0e7ff33e",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "LookAround",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "42826888-69c0-4a26-903c-a2081bdefd5f",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone(min=0.5,max=1),NormalizeVector2",
                    "groups": "Gamepad",
                    "action": "LookAround",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Keyboard WASD",
                    "id": "3ead896c-6606-46a4-8ca3-7d5d8d0fcd1a",
                    "path": "2DVector",
                    "interactions": "Tap",
                    "processors": "ScaleVector2(y=0.5),NormalizeVector2",
                    "groups": "",
                    "action": "LookAround",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "107b987d-9f0c-4610-8606-36aca8c723bc",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "LookAround",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "a6ce7af1-a6c6-43c7-8b4e-9a6d0aecef67",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "LookAround",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "bff59827-94cd-4022-9dcc-d4cd6e4f9a25",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "LookAround",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "e7af7497-9941-456c-b5a9-7c1a02ad683b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "LookAround",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ede6d7ca-5984-47f6-989d-0a9d2c62eef8",
                    "path": "<Gamepad>/dpad",
                    "interactions": "Tap",
                    "processors": "ScaleVector2(y=0.5),NormalizeVector2",
                    "groups": "Gamepad",
                    "action": "LookAround",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5a3a381f-cff9-4fad-8399-ba54d1d130a7",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold(duration=0.3)",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "HoldSelect",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3db04983-d8ed-4120-9cb2-f3ffa55aa68a",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "HoldSelect",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MenuNav",
            "id": "2c0f1a1d-b2a7-4b3e-ad08-fb8df0e86655",
            "actions": [
                {
                    "name": "MenuOpenClose",
                    "type": "Button",
                    "id": "1459e1a9-6207-48f8-8b26-d7fe435fb36d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "Page Right",
                    "type": "Button",
                    "id": "47228197-282e-4d27-8503-dbf832718d5b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "Page Left",
                    "type": "Button",
                    "id": "46f93ecd-dc6f-4dd1-83e7-3bb8d9af1a7d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "455cedb7-8c1c-4930-939b-ce273633ae6d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cf32bbf4-ff2d-4b52-9224-584e7f3f6e2e",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Page Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3c6a82cc-9fcf-4fcf-84d4-49e4cd081623",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Page Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5f43bae1-b9c9-4d0b-9b9b-35decefe8a97",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Page Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bf43aea2-005b-45f0-a204-fff3b74b7f31",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Page Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "029e88b3-0e81-433c-a51a-dd2b34687bfa",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "163303bf-2d24-4c22-9a5b-d8e65a1692da",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2b8ea43f-cc00-469f-8f0a-ecb0858bf2b2",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse;Keyboard",
                    "action": "MenuOpenClose",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0ae2128b-abcd-4f18-8711-8ea0a04fdd7c",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "MenuOpenClose",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Mouse",
            "bindingGroup": "Mouse",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}